--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,7 @@ buildscript {
     classpath "io.spring.gradle:dependency-management-plugin:${springIOVersion}"
     classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     classpath "org.junit.platform:junit-platform-gradle-plugin:1.0.1"
+    classpath('com.palantir.gradle.docker:gradle-docker:0.25.0')
   }
 }
 
@@ -129,15 +130,6 @@ apply from: "$rootDir/versionsOfDependencies.gradle"
  * 引入所有模块的配置，包括父模块,子模块
  */
 allprojects {
-  // jar包的group ，version配置
-  group 'com.java.${projectName}'
-  version '1.0-SNAPSHOT'
-
-  // 定义全局变量
-  ext {
-    projectName = rootProject.name
-  }
-
   apply plugin: "jacoco"
   apply plugin: "idea"
 
@@ -227,6 +219,10 @@ subprojects {
   apply plugin: "io.spring.dependency-management"
   apply plugin: 'org.springframework.boot'
   apply plugin: "org.junit.platform.gradle.plugin"
+
+  // jar包的group ，version配置
+  group "com.java.${rootProject.name}"
+  version '1.0-SNAPSHOT'
 
   // jdk编译版本
   sourceCompatibility = JavaVersion.VERSION_11
