--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'spring-boot-tutorials'
 include 'spring-boot-hoverfly', 'spring-boot-hoverfly-client'
 include 'spring-boot-security5:oauth2-sample-authorization-server', 'spring-boot-security5:oauth2-keycloak-authorization-server'
 include 'spring-boot-swagger3'
+include 'spring-boot-dockerfile'
 
