--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'spring-boot-hoverfly', 'spring-boot-hoverfly-client'
 include 'spring-boot-security5:oauth2-sample-authorization-server', 'spring-boot-security5:oauth2-keycloak-authorization-server'
 include 'spring-boot-swagger3'
 include 'spring-boot-dockerfile'
+include 'spring-boot-jib'
 
