--- a/spring-boot-dockerfile-maven/pom.xml
+++ b/spring-boot-dockerfile-maven/pom.xml
@@ -63,8 +63,9 @@
           <repository>com.xue/${project.artifactId}</repository>
           <tag>${project.version}</tag> <!--不指定tag默认为latest -->
           <buildArgs>
-            <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+            <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
           </buildArgs>
+          <dockerfile>src/main/resources/docker/Dockerfile</dockerfile>
         </configuration>
       </plugin>
     </plugins>
