--- a/spring-boot-dockerfile-maven/src/main/resources/docker/Dockerfile
+++ b/spring-boot-dockerfile-maven/src/main/resources/docker/Dockerfile
@@ -5,7 +5,7 @@ FROM adoptopenjdk/openjdk11:ubi
 ARG JAR_FILE
 
 # 添加 Spring Boot 包
-ADD ${JAR_FILE} app.jar
+ADD target/${JAR_FILE} app.jar
 
 # 执行启动命令
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
