--- a/spring-boot-dockerfile-maven/pom.xml
+++ b/spring-boot-dockerfile-maven/pom.xml
@@ -9,7 +9,7 @@
     <version>2.4.0</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
-  <groupId>org.example</groupId>
+  <groupId>com.java</groupId>
   <artifactId>spring-boot-dockerfile-maven</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>dockerfile-maven-plugin</name>
