--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'spring-boot-jib'
 include 'spring-boot-graalvm'
 include 'spring-boot-jvm-optimize'
 include 'spring-boot-retrofit'
+include 'spring-boot-thumbnailator'
 
