--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
 rootProject.name = 'spring-boot-tutorials'
 include 'spring-boot-hoverfly:spring-boot-hoverfly-server', 'spring-boot-hoverfly:spring-boot-hoverfly-client'
 include 'spring-boot-security5:oauth2-sample-authorization-server', 'spring-boot-security5:oauth2-keycloak-authorization-server'
+include 'spring-boot-security5:oauth2-authorization-code-server'
+include 'spring-boot-security5:oauth2-authorization-code-resource-server'
+include 'spring-boot-security5:oauth2-authorization-code-client-resttemplate-jdbc'
 include 'spring-boot-swagger3'
 include 'spring-boot-dockerfile'
 include 'spring-boot-jib'
@@ -9,4 +12,5 @@ include 'spring-boot-jvm-optimize'
 include 'spring-boot-retrofit'
 include 'spring-boot-thumbnailator'
 include 'spring-boot-keycloak'
+
 
