--- a/spring-boot-security5/oauth2-keycloak-authorization-server/src/main/resources/application.yml
+++ b/spring-boot-security5/oauth2-keycloak-authorization-server/src/main/resources/application.yml
@@ -10,6 +10,6 @@ keycloak:
   server:
     contextPath: /auth
     adminUser:
-      username: bael-admin
-      password: pass
+      username: admin
+      password: 123456
     realmImportFile: baeldung-realm.json
